move gameline and edition styling attrs to hidden

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -66,8 +66,8 @@ input.sheet-settingssheet:checked ~ div.sheet-skills,
 input.sheet-settingssheet:checked ~ div.sheet-othertraits,
 input.sheet-settingssheet:checked ~ div.sheet-expandedsheet,
 input.sheet-settingssheet:checked ~ div.sheet-expandedsheet2,
-input.sheet-1st:checked ~ div * .sheet-2nd,
-input.sheet-2nd:checked ~ div * .sheet-1st,
+input.sheet-1st-sheet:checked ~ div * .sheet-2nd,
+input.sheet-2nd-sheet:checked ~ div * .sheet-1st,
 input.sheet-pages:checked ~ .sheet-gametype,
 input.sheet-pages:checked ~ input.sheet-gametype + span,
 input.sheet-page2:checked ~ div.sheet-3colrow,
@@ -98,8 +98,9 @@ span.sheet-edition {
 }
 
 /* hide othertrait dots on changeling 2nd sheets (2e contracts don't have dots) */
-input.sheet-changelingsheet.sheet-2nd:checked ~ div * td.sheet-changeling.sheet-2nd ~ td.sheet-normal,
-input.sheet-changelingsheet.sheet-2nd:checked ~ div * tr.sheet-changeling.sheet-2nd ~ tr.sheet-normal {
+input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ div * td.sheet-changeling.sheet-2nd ~ td.sheet-normal,
+/* hide morality dots on changeling 2nd sheets (2e clarity uses attr_moralhealth instead) */
+input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ div * tr.sheet-changeling.sheet-2nd ~ tr.sheet-normal {
     display: none;
 }
 
@@ -184,13 +185,13 @@ input.sheet-page3:checked ~ .sheet-background-image::after{
 }
 
 /* HEADER IMAGE */
-input.sheet-settingssheet:not(:checked) ~ input.sheet-mortalsheet:checked ~ img.sheet-header.sheet-mortal,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-vampiresheet:checked ~ img.sheet-header.sheet-vampire,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-werewolfsheet:checked ~ img.sheet-header.sheet-werewolf,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-magesheet:checked ~ img.sheet-header.sheet-mage,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-prometheansheet:checked ~ img.sheet-header.sheet-promethean,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-changelingsheet:checked ~ img.sheet-header.sheet-changeling,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-huntersheet:checked ~ img.sheet-header.sheet-hunter {
+input.sheet-mortalsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-mortal,
+input.sheet-vampiresheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-vampire,
+input.sheet-werewolfsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-werewolf,
+input.sheet-magesheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-mage,
+input.sheet-prometheansheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-promethean,
+input.sheet-changelingsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-changeling,
+input.sheet-huntersheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-hunter {
     height: 150px;
     display: inline !important;
     position: absolute;
@@ -199,8 +200,8 @@ input.sheet-settingssheet:not(:checked) ~ input.sheet-huntersheet:checked ~ img.
     right: 0;
     margin: auto;
 }
-input.sheet-settingssheet:not(:checked) ~ input.sheet-geistsheet:checked ~ img.sheet-header.sheet-geist,
-input.sheet-settingssheet:not(:checked) ~ input.sheet-demonsheet:checked ~ img.sheet-header.sheet-demon{
+input.sheet-geistsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-geist,
+input.sheet-demonsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-demon{
     height: 200px;
     display: inline !important;
     position: absolute;
@@ -210,7 +211,7 @@ input.sheet-settingssheet:not(:checked) ~ input.sheet-demonsheet:checked ~ img.s
     margin: auto;
 }
 
-input.sheet-settingssheet:not(:checked) ~ input.sheet-huntersheet:checked ~ img.sheet-header.sheet-hunter {
+input.sheet-huntersheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-hunter {
     top: 50px;
     height: 120px;
 }
@@ -220,16 +221,12 @@ input.sheet-settingssheet:checked ~ .sheet-header + .sheet-settings {
     display: block !important;
 }
 
-input.sheet-settingssheet:checked + span.sheet-attr,
-input.sheet-page1:checked + span.sheet-attr,
-input.sheet-page2:checked + span.sheet-attr,
-input.sheet-page3:checked + span.sheet-attr{
+input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-settingssheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-settingssheet:checked +span.sheet-attr {
+input.sheet-settingssheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
@@ -240,9 +237,9 @@ input.sheet-settingssheet:checked ~ div * input.sheet-weapon:checked + span + .s
     font-weight: bold;
 }
 
+input.sheet-mortalsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-mortalsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mortalsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-mortalsheet:checked +span.sheet-attr {
+input.sheet-mortalsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
@@ -253,9 +250,9 @@ input.sheet-mortalsheet:checked ~ div * input.sheet-weapon:checked + span + .she
     font-weight: bold;
 }
 
+input.sheet-vampiresheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-vampiresheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-vampiresheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-vampiresheet:checked +span.sheet-attr {
+input.sheet-vampiresheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
     color: #B21800;
     text-shadow: 0px 0px 10px black;
 }
@@ -266,10 +263,10 @@ input.sheet-vampiresheet:checked ~ div * input.sheet-weapon:checked + span + .sh
     font-weight: bold;
 }
 
+input.sheet-werewolfsheet:checked ~ input.sheet-attr:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-werewolfsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-werewolfsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-werewolfsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-werewolfsheet:checked +span.sheet-attr {
+input.sheet-werewolfsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #E9813E;
     text-shadow: 0px 0px 10px black;
 }
@@ -280,10 +277,10 @@ input.sheet-werewolfsheet:checked ~ div * input.sheet-weapon:checked + span + .s
     font-weight: bold;
 }
 
+input.sheet-magesheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-magesheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-magesheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-magesheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-magesheet:checked +span.sheet-attr {
+input.sheet-magesheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #0000FF;
     text-shadow: 0px 0px 10px black;
 }
@@ -294,10 +291,10 @@ input.sheet-magesheet:checked ~ div * input.sheet-weapon:checked + span + .sheet
     font-weight: bold;
 }
 
+input.sheet-prometheansheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-prometheansheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-prometheansheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-prometheansheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-prometheansheet:checked +span.sheet-attr {
+input.sheet-prometheansheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #660099;
     text-shadow: 0px 0px 10px black;
 }
@@ -308,10 +305,10 @@ input.sheet-prometheansheet:checked ~ div * input.sheet-weapon:checked + span + 
     font-weight: bold;
 }
 
+input.sheet-changelingsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-changelingsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-changelingsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-changelingsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-changelingsheet:checked +span.sheet-attr {
+input.sheet-changelingsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #006600;
     text-shadow: 0px 0px 10px black;
 }
@@ -322,10 +319,10 @@ input.sheet-changelingsheet:checked ~ div * input.sheet-weapon:checked + span + 
     font-weight: bold;
 }
 
+input.sheet-geistsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-geistsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-geistsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-geistsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-geistsheet:checked +span.sheet-attr {
+input.sheet-geistsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #00CCFF;
     text-shadow: 0px 0px 10px black;
 }
@@ -336,10 +333,10 @@ input.sheet-geistsheet:checked ~ div * input.sheet-weapon:checked + span + .shee
     font-weight: bold;
 }
 
+input.sheet-mummysheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-mummysheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
 input.sheet-mummysheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mummysheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
-input.sheet-sheetoptions.sheet-mummysheet:checked +span.sheet-attr {
+input.sheet-mummysheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
     color: #996600;
     text-shadow: 0px 0px 10px black;
 }
@@ -350,9 +347,9 @@ input.sheet-mummysheet:checked ~ div * input.sheet-weapon:checked + span + .shee
     font-weight: bold;
 }
 
+input.sheet-demonsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-demonsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-demonsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-demonsheet:checked +span.sheet-attr {
+input.sheet-demonsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
@@ -363,9 +360,9 @@ input.sheet-demonsheet:checked ~ div * input.sheet-weapon:checked + span + .shee
     font-weight: bold;
 }
 
+input.sheet-beastsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-beastsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-beastsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-beastsheet:checked +span.sheet-attr {
+input.sheet-beastsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
@@ -376,9 +373,9 @@ input.sheet-beastsheet:checked ~ div * input.sheet-weapon:checked + span + .shee
     font-weight: bold;
 }
 
+input.sheet-huntersheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
 input.sheet-huntersheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-huntersheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-sheetoptions.sheet-huntersheet:checked +span.sheet-attr {
+input.sheet-huntersheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
 }
