consolidate and wrap settings section hide pages when not checked

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -25,8 +25,7 @@
 .sheet-mummy,
 .sheet-demon,
 .sheet-beast,
-.sheet-hunter,
-.sheet-settings {
+.sheet-hunter {
     display: none !important;
 }
 
@@ -40,8 +39,7 @@ input.sheet-geistsheet:checked ~ div * .sheet-geist,
 input.sheet-mummysheet:checked ~ div * .sheet-mummy,
 input.sheet-demonsheet:checked ~ div * .sheet-demon,
 input.sheet-beastsheet:checked ~ div * .sheet-beast,
-input.sheet-huntersheet:checked ~ div * .sheet-hunter,
-input.sheet-settingssheet:checked ~ div * .sheet-settings {
+input.sheet-huntersheet:checked ~ div * .sheet-hunter {
     display: inline-block !important;
 }
 
@@ -55,42 +53,21 @@ input.sheet-geistsheet:checked ~ div * table.sheet-geist,
 input.sheet-mummysheet:checked ~ div * table.sheet-mummy,
 input.sheet-demonsheet:checked ~ div * table.sheet-demon,
 input.sheet-beastsheet:checked ~ div * table.sheet-beast,
-input.sheet-huntersheet:checked ~ div * table.sheet-hunter,
-input.sheet-settingssheet:checked ~ div * table.sheet-settings {
+input.sheet-huntersheet:checked ~ div * table.sheet-hunter {
     display: table !important;
 }
 
-input.sheet-settingssheet:checked ~ div.sheet-3colrow,
-input.sheet-settingssheet:checked ~ div.sheet-diceroller,
-input.sheet-settingssheet:checked ~ div.sheet-skills,
-input.sheet-settingssheet:checked ~ div.sheet-othertraits,
-input.sheet-settingssheet:checked ~ div.sheet-expandedsheet,
-input.sheet-settingssheet:checked ~ div.sheet-expandedsheet2,
-input.sheet-1st-sheet:checked ~ div * .sheet-2nd,
-input.sheet-2nd-sheet:checked ~ div * .sheet-1st,
-input.sheet-pages:checked ~ .sheet-gametype,
-input.sheet-pages:checked ~ input.sheet-gametype + span,
-input.sheet-page2:checked ~ div.sheet-3colrow,
-input.sheet-page2:checked ~ div.sheet-diceroller,
-input.sheet-page2:checked ~ div.sheet-skills,
-input.sheet-page2:checked ~ div.sheet-othertraits,
-input.sheet-page3:checked ~ div.sheet-3colrow,
-input.sheet-page3:checked ~ div.sheet-diceroller,
-input.sheet-page3:checked ~ div.sheet-skills,
-input.sheet-page3:checked ~ div.sheet-othertraits {
+input.sheet-settingssheet:checked ~ .sheet-header,
+input.sheet-settingssheet:not(:checked) ~ .sheet-settings,
+input.sheet-page1:not(:checked) ~ .sheet-3colrow,
+input.sheet-page1:not(:checked) ~ .sheet-diceroller,
+input.sheet-page1:not(:checked) ~ .sheet-skills,
+input.sheet-page1:not(:checked) ~ .sheet-othertraits,
+input.sheet-page2:not(:checked) ~ .sheet-expandedsheet,
+input.sheet-page3:not(:checked) ~ .sheet-expandedsheet2,
+input.sheet-1st-sheet:checked ~ * .sheet-2nd,
+input.sheet-2nd-sheet:checked ~ * .sheet-1st {
     display: none !important;
-}
-
-input.sheet-settingssheet:checked ~ div.sheet-settings-spacer {
-    display: block !important;
-}
-
-input.sheet-page2:checked ~ div.sheet-expandedsheet {
-    display: inline-block;
-}
-
-input.sheet-page3:checked ~ div.sheet-expandedsheet2 {
-    display: inline-block;
 }
 
 span.sheet-edition {
@@ -386,8 +363,6 @@ input.sheet-huntersheet:checked ~ div * input.sheet-weapon:checked + span + .she
     font-weight: bold;
 }
 
-.sheet-expandedsheet,
-.sheet-expandedsheet2,
 .sheet-rolltemplates {
     display: none;
 }
