fix wildcard selector for game line display

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -29,31 +29,31 @@
     display: none !important;
 }
 
-input.sheet-mortalsheet:checked ~ div * .sheet-mortal,
-input.sheet-vampiresheet:checked ~ div * .sheet-vampire,
-input.sheet-werewolfsheet:checked ~ div * .sheet-werewolf,
-input.sheet-magesheet:checked ~ div * .sheet-mage,
-input.sheet-prometheansheet:checked ~ div * .sheet-promethean,
-input.sheet-changelingsheet:checked ~ div * .sheet-changeling,
-input.sheet-geistsheet:checked ~ div * .sheet-geist,
-input.sheet-mummysheet:checked ~ div * .sheet-mummy,
-input.sheet-demonsheet:checked ~ div * .sheet-demon,
-input.sheet-beastsheet:checked ~ div * .sheet-beast,
-input.sheet-huntersheet:checked ~ div * .sheet-hunter {
+input.sheet-mortalsheet:checked ~ * .sheet-mortal,
+input.sheet-vampiresheet:checked ~ * .sheet-vampire,
+input.sheet-werewolfsheet:checked ~ * .sheet-werewolf,
+input.sheet-magesheet:checked ~ * .sheet-mage,
+input.sheet-prometheansheet:checked ~ * .sheet-promethean,
+input.sheet-changelingsheet:checked ~ * .sheet-changeling,
+input.sheet-geistsheet:checked ~ * .sheet-geist,
+input.sheet-mummysheet:checked ~ * .sheet-mummy,
+input.sheet-demonsheet:checked ~ * .sheet-demon,
+input.sheet-beastsheet:checked ~ * .sheet-beast,
+input.sheet-huntersheet:checked ~ * .sheet-hunter {
     display: inline-block !important;
 }
 
-input.sheet-mortalsheet:checked ~ div * table.sheet-mortal,
-input.sheet-vampiresheet:checked ~ div * table.sheet-vampire,
-input.sheet-werewolfsheet:checked ~ div * table.sheet-werewolf,
-input.sheet-magesheet:checked ~ div * table.sheet-mage,
-input.sheet-prometheansheet:checked ~ div * table.sheet-promethean,
-input.sheet-changelingsheet:checked ~ div * table.sheet-changeling,
-input.sheet-geistsheet:checked ~ div * table.sheet-geist,
-input.sheet-mummysheet:checked ~ div * table.sheet-mummy,
-input.sheet-demonsheet:checked ~ div * table.sheet-demon,
-input.sheet-beastsheet:checked ~ div * table.sheet-beast,
-input.sheet-huntersheet:checked ~ div * table.sheet-hunter {
+input.sheet-mortalsheet:checked ~ * table.sheet-mortal,
+input.sheet-vampiresheet:checked ~ * table.sheet-vampire,
+input.sheet-werewolfsheet:checked ~ * table.sheet-werewolf,
+input.sheet-magesheet:checked ~ * table.sheet-mage,
+input.sheet-prometheansheet:checked ~ * table.sheet-promethean,
+input.sheet-changelingsheet:checked ~ * table.sheet-changeling,
+input.sheet-geistsheet:checked ~ * table.sheet-geist,
+input.sheet-mummysheet:checked ~ * table.sheet-mummy,
+input.sheet-demonsheet:checked ~ * table.sheet-demon,
+input.sheet-beastsheet:checked ~ * table.sheet-beast,
+input.sheet-huntersheet:checked ~ * table.sheet-hunter {
     display: table !important;
 }
 
@@ -75,9 +75,9 @@ span.sheet-edition {
 }
 
 /* hide othertrait dots on changeling 2nd sheets (2e contracts don't have dots) */
-input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ div * td.sheet-changeling.sheet-2nd ~ td.sheet-normal,
+input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ * td.sheet-changeling.sheet-2nd ~ td.sheet-normal,
 /* hide morality dots on changeling 2nd sheets (2e clarity uses attr_moralhealth instead) */
-input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ div * tr.sheet-changeling.sheet-2nd ~ tr.sheet-normal {
+input.sheet-changelingsheet:checked ~ input.sheet-2nd-sheet:checked ~ * tr.sheet-changeling.sheet-2nd ~ tr.sheet-normal {
     display: none;
 }
 
