style header logo with flex and min-height

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -162,35 +162,28 @@ input.sheet-page3:checked ~ .sheet-background-image::after{
 }
 
 /* HEADER IMAGE */
-input.sheet-mortalsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-mortal,
-input.sheet-vampiresheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-vampire,
-input.sheet-werewolfsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-werewolf,
-input.sheet-magesheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-mage,
-input.sheet-prometheansheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-promethean,
-input.sheet-changelingsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-changeling,
-input.sheet-huntersheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-hunter {
-    height: 150px;
-    display: inline !important;
-    position: absolute;
-    top: 40px;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-input.sheet-geistsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-geist,
-input.sheet-demonsheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-demon{
-    height: 200px;
-    display: inline !important;
-    position: absolute;
-    top: 40px;
-    left: 0;
-    right: 0;
-    margin: auto;
+.sheet-header {
+    display: flex;
+    justify-content: center;
+    min-height: 185px;
 }
 
-input.sheet-huntersheet:checked ~ input.sheet-settingssheet:not(:checked) ~ img.sheet-header.sheet-hunter {
-    top: 50px;
+.sheet-header img.sheet-mortal,
+.sheet-header img.sheet-vampire,
+.sheet-header img.sheet-werewolf,
+.sheet-header img.sheet-mage,
+.sheet-header img.sheet-promethean,
+.sheet-header img.sheet-changeling {
+    height: 150px;
+}
+
+.sheet-header img.sheet-hunter {
     height: 120px;
+}
+
+.sheet-header img.sheet-geist,
+.sheet-header img.sheet-demon {
+    height: 200px;
 }
 
 input.sheet-settingssheet:checked ~ .sheet-header + .sheet-settings {
