wrap page 1 section

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -59,10 +59,7 @@ input.sheet-huntersheet:checked ~ * table.sheet-hunter {
 
 input.sheet-settingssheet:checked ~ .sheet-header,
 input.sheet-settingssheet:not(:checked) ~ .sheet-settings,
-input.sheet-page1:not(:checked) ~ .sheet-3colrow,
-input.sheet-page1:not(:checked) ~ .sheet-diceroller,
-input.sheet-page1:not(:checked) ~ .sheet-skills,
-input.sheet-page1:not(:checked) ~ .sheet-othertraits,
+input.sheet-page1:not(:checked) ~ .sheet-main,
 input.sheet-page2:not(:checked) ~ .sheet-expandedsheet,
 input.sheet-page3:not(:checked) ~ .sheet-expandedsheet2,
 input.sheet-1st-sheet:checked ~ * .sheet-2nd,
