rename page sections

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -59,9 +59,9 @@ input.sheet-huntersheet:checked ~ * table.sheet-hunter {
 
 input.sheet-settingssheet:checked ~ .sheet-header,
 input.sheet-settingssheet:not(:checked) ~ .sheet-settings,
-input.sheet-page1:not(:checked) ~ .sheet-main,
-input.sheet-page2:not(:checked) ~ .sheet-expandedsheet,
-input.sheet-page3:not(:checked) ~ .sheet-expandedsheet2,
+input.sheet-page1-sheet:not(:checked) ~ .sheet-page1,
+input.sheet-page2-sheet:not(:checked) ~ .sheet-page2,
+input.sheet-page3-sheet:not(:checked) ~ .sheet-page3,
 input.sheet-1st-sheet:checked ~ * .sheet-2nd,
 input.sheet-2nd-sheet:checked ~ * .sheet-1st {
     display: none !important;
@@ -153,8 +153,8 @@ input.sheet-huntersheet:checked ~ .sheet-background-image::after {
 }
 
 input.sheet-settingssheet:checked ~ .sheet-background-image::after,
-input.sheet-page2:checked ~ .sheet-background-image::after,
-input.sheet-page3:checked ~ .sheet-background-image::after{
+input.sheet-page2-sheet:checked ~ .sheet-background-image::after,
+input.sheet-page3-sheet:checked ~ .sheet-background-image::after{
     background-size: 100%;
 }
 
@@ -1233,7 +1233,7 @@ input[type=number] {
 
 .sheet-weapontable select,
 .sheet-settings select,
-.sheet-expandedsheet select,
+.sheet-page2 select,
 .sheet-othertrait select{
     width: 47px;
     height: 14px;
@@ -1253,7 +1253,7 @@ input[type=number] {
 }
 
 .sheet-settings select,
-.sheet-expandedsheet select {
+.sheet-page2 select {
     width: 80px;
 }
 
@@ -1274,15 +1274,15 @@ input[type=number] {
     text-align: center;
 }
 
-.sheet-expandedsheet input[type="text"].sheet-partname {
+.sheet-page2 input[type="text"].sheet-partname {
     width: 116px;
 }
 
-.sheet-expandedsheet input[type="text"].sheet-name {
+.sheet-page2 input[type="text"].sheet-name {
     width: 150px;
 }
 
-.sheet-expandedsheet input[type="text"].sheet-partpool {
+.sheet-page2 input[type="text"].sheet-partpool {
     width: 20px;
     padding: 1px;
     margin-left: 3px;
@@ -1301,7 +1301,7 @@ input[type=number] {
     margin-bottom: 0px;
 }
 
-.sheet-expandedsheet .sheet-rollcontainer {
+.sheet-page2 .sheet-rollcontainer {
     background: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness%20by%20Roll20/images/die.png') no-repeat center;
     background-size: contain;
     height: 40px;
@@ -1345,15 +1345,15 @@ input[type=number] {
     padding: 0;
 }
 
-.sheet-expandedsheet textarea,
-.sheet-expandedsheet2 textarea {
+.sheet-page2 textarea,
+.sheet-page3 textarea {
     resize:vertical;
     width: calc(100% - 10px);
     margin-top: 10px;
     height: 74px;
 }
 
-.sheet-expandedsheet .sheet-customroll {
+.sheet-page2 .sheet-customroll {
     border: solid 1px black;
     border-radius: 4px;
     padding: 5px;
@@ -1391,11 +1391,11 @@ input[type=text].sheet-title {
     padding: 0px;
 }
 
-.sheet-expandedsheet2 {
+.sheet-page3 {
     text-align: center;
 }
 
-.sheet-expandedsheet2 .sheet-subheader {
+.sheet-page3 .sheet-subheader {
     width: 300px;
     font-size: 1.4em;
     font-weight: bolder;
