consolidate game line checked color styling

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -188,169 +188,103 @@ input.sheet-settingssheet:checked ~ .sheet-header + .sheet-settings {
     display: block !important;
 }
 
-input.sheet-attr:checked + span.sheet-attr {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-}
-
-input.sheet-settingssheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-}
-
-input.sheet-settingssheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+input.sheet-attr:checked + span.sheet-attr,
+.sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #2A2D80;
     text-shadow: 0px 0px 10px black;
     font-weight: bold;
 }
 
-input.sheet-mortalsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mortalsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mortalsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-}
-
-input.sheet-mortalsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
+input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     font-weight: bold;
 }
 
+input.sheet-attr.sheet-mortalsheet:checked + span.sheet-attr,
+input.sheet-mortalsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-mortalsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-mortalsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
+    color: #2A2D80;
+}
+
+input.sheet-attr.sheet-vampiresheet:checked + span.sheet-attr,
 input.sheet-vampiresheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-vampiresheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-vampiresheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
+input.sheet-vampiresheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-vampiresheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-vampiresheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #B21800;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-vampiresheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #B21800;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
-input.sheet-werewolfsheet:checked ~ input.sheet-attr:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-werewolfsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-werewolfsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-werewolfsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-attr.sheet-werewolfsheet:checked + span.sheet-attr,
+input.sheet-werewolfsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
+input.sheet-werewolfsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-werewolfsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-werewolfsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #E9813E;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-werewolfsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #E9813E;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-magesheet:checked + span.sheet-attr,
 input.sheet-magesheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-magesheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-magesheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-magesheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-magesheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-magesheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-magesheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #0000FF;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-magesheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #0000FF;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-prometheansheet:checked + span.sheet-attr,
 input.sheet-prometheansheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-prometheansheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-prometheansheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-prometheansheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-prometheansheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-prometheansheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-prometheansheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #660099;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-prometheansheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #660099;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-changelingsheet:checked + span.sheet-attr,
 input.sheet-changelingsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-changelingsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-changelingsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-changelingsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-changelingsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-changelingsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-changelingsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #006600;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-changelingsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #006600;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-geistsheet:checked + span.sheet-attr,
 input.sheet-geistsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-geistsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-geistsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-geistsheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-geistsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-geistsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-geistsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #00CCFF;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-geistsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #00CCFF;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-mummysheet:checked + span.sheet-attr,
 input.sheet-mummysheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mummysheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mummysheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr,
-input.sheet-mummysheet:checked ~ div * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr {
+input.sheet-mummysheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-mummysheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-mummysheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #996600;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-mummysheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #996600;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-demonsheet:checked + span.sheet-attr,
 input.sheet-demonsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-demonsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-demonsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
+input.sheet-demonsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-demonsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-demonsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-demonsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-beastsheet:checked + span.sheet-attr,
 input.sheet-beastsheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-beastsheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-beastsheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
+input.sheet-beastsheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-beastsheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-beastsheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
 }
 
-input.sheet-beastsheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
-}
-
+input.sheet-attr.sheet-huntersheet:checked + span.sheet-attr,
 input.sheet-huntersheet:checked ~ input.sheet-attr:checked + span.sheet-attr,
-input.sheet-huntersheet:checked ~ div * input.sheet-attr:checked + span.sheet-attr,
-input.sheet-huntersheet:checked ~ span > input.sheet-attr:checked + span.sheet-attr {
+input.sheet-huntersheet:checked ~ * input.sheet-attr:checked + span.sheet-attr,
+input.sheet-huntersheet:checked ~ * .sheet-potency input.sheet-attr:checked ~ span.sheet-attr,
+input.sheet-huntersheet:checked ~ * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
     color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-}
-
-input.sheet-huntersheet:checked ~ div * input.sheet-weapon:checked + span + .sheet-weaponstat.sheet-name {
-    color: #2A2D80;
-    text-shadow: 0px 0px 10px black;
-    font-weight: bold;
 }
 
 .sheet-rolltemplates {
